tests/snapshots/typing__typing_blinking.snap
---
source: tests/typing.rs
expression: file
---
typedefs: []
functions: []
nodes:
  - id: counter
    is_component: false
    inputs:
      - - res
        - Boolean
      - - tick
        - Boolean
    equations:
      - - o
        - scope: Output
          id: o
          signal_type: Integer
          expression:
            FunctionApplication:
              function_expression:
                Call:
                  id: if_then_else
                  typing:
                    Abstract:
                      - - Boolean
                        - Integer
                        - Integer
                      - Integer
                  location: ~
              inputs:
                - SignalCall:
                    id: res
                    typing: Boolean
                    location: ~
                - Constant:
                    constant:
                      Integer: 0
                    typing: Integer
                    location: ~
                - FunctionApplication:
                    function_expression:
                      Call:
                        id: " + "
                        typing:
                          Abstract:
                            - - Integer
                              - Integer
                            - Integer
                        location: ~
                    inputs:
                      - FunctionApplication:
                          function_expression:
                            Call:
                              id: (_)
                              typing:
                                Abstract:
                                  - - Integer
                                  - Integer
                              location: ~
                          inputs:
                            - FollowedBy:
                                constant:
                                  Integer: 0
                                expression:
                                  SignalCall:
                                    id: o
                                    typing: Integer
                                    location: ~
                                typing: Integer
                                location: ~
                          typing: Integer
                          location: ~
                      - SignalCall:
                          id: inc
                          typing: Integer
                          location: ~
                    typing: Integer
                    location: ~
              typing: Integer
              location: ~
          location: ~
      - - inc
        - scope: Local
          id: inc
          signal_type: Integer
          expression:
            FunctionApplication:
              function_expression:
                Call:
                  id: if_then_else
                  typing:
                    Abstract:
                      - - Boolean
                        - Integer
                        - Integer
                      - Integer
                  location: ~
              inputs:
                - SignalCall:
                    id: tick
                    typing: Boolean
                    location: ~
                - Constant:
                    constant:
                      Integer: 1
                    typing: Integer
                    location: ~
                - Constant:
                    constant:
                      Integer: 0
                    typing: Integer
                    location: ~
              typing: Integer
              location: ~
          location: ~
    location: ~
  - id: blinking
    is_component: false
    inputs:
      - - tick_number
        - Integer
    equations:
      - - status
        - scope: Output
          id: status
          signal_type: Integer
          expression:
            FunctionApplication:
              function_expression:
                Call:
                  id: if_then_else
                  typing:
                    Abstract:
                      - - Boolean
                        - Integer
                        - Integer
                      - Integer
                  location: ~
              inputs:
                - SignalCall:
                    id: on_off
                    typing: Boolean
                    location: ~
                - FunctionApplication:
                    function_expression:
                      Call:
                        id: " + "
                        typing:
                          Abstract:
                            - - Integer
                              - Integer
                            - Integer
                        location: ~
                    inputs:
                      - SignalCall:
                          id: counter
                          typing: Integer
                          location: ~
                      - Constant:
                          constant:
                            Integer: 1
                          typing: Integer
                          location: ~
                    typing: Integer
                    location: ~
                - Constant:
                    constant:
                      Integer: 0
                    typing: Integer
                    location: ~
              typing: Integer
              location: ~
          location: ~
      - - counter
        - scope: Local
          id: counter
          signal_type: Integer
          expression:
            NodeApplication:
              node: counter
              inputs:
                - SignalCall:
                    id: res
                    typing: Boolean
                    location: ~
                - Constant:
                    constant:
                      Boolean: true
                    typing: Boolean
                    location: ~
              signal: o
              typing: Integer
              location: ~
          location: ~
      - - res
        - scope: Local
          id: res
          signal_type: Boolean
          expression:
            FollowedBy:
              constant:
                Boolean: true
              expression:
                FunctionApplication:
                  function_expression:
                    Call:
                      id: (_)
                      typing:
                        Abstract:
                          - - Boolean
                          - Boolean
                      location: ~
                  inputs:
                    - FunctionApplication:
                        function_expression:
                          Call:
                            id: " == "
                            typing:
                              Abstract:
                                - - Integer
                                  - Integer
                                - Boolean
                            location: ~
                        inputs:
                          - FunctionApplication:
                              function_expression:
                                Call:
                                  id: " + "
                                  typing:
                                    Abstract:
                                      - - Integer
                                        - Integer
                                      - Integer
                                  location: ~
                              inputs:
                                - SignalCall:
                                    id: counter
                                    typing: Integer
                                    location: ~
                                - Constant:
                                    constant:
                                      Integer: 1
                                    typing: Integer
                                    location: ~
                              typing: Integer
                              location: ~
                          - SignalCall:
                              id: tick_number
                              typing: Integer
                              location: ~
                        typing: Boolean
                        location: ~
                  typing: Boolean
                  location: ~
              typing: Boolean
              location: ~
          location: ~
      - - on_off
        - scope: Local
          id: on_off
          signal_type: Boolean
          expression:
            FunctionApplication:
              function_expression:
                TypedAbstraction:
                  inputs:
                    - - t
                      - Boolean
                    - - b
                      - Boolean
                  expression:
                    Application:
                      function_expression:
                        Call:
                          id: if_then_else
                          typing:
                            Abstract:
                              - - Boolean
                                - Boolean
                                - Boolean
                              - Boolean
                          location: ~
                      inputs:
                        - Call:
                            id: t
                            typing: Boolean
                            location: ~
                        - Application:
                            function_expression:
                              Call:
                                id: "!"
                                typing:
                                  Abstract:
                                    - - Boolean
                                    - Boolean
                                location: ~
                            inputs:
                              - Call:
                                  id: b
                                  typing: Boolean
                                  location: ~
                            typing: Boolean
                            location: ~
                        - Call:
                            id: b
                            typing: Boolean
                            location: ~
                      typing: Boolean
                      location: ~
                  typing:
                    Abstract:
                      - - Boolean
                        - Boolean
                      - Boolean
                  location: ~
              inputs:
                - SignalCall:
                    id: res
                    typing: Boolean
                    location: ~
                - FollowedBy:
                    constant:
                      Boolean: true
                    expression:
                      SignalCall:
                        id: on_off
                        typing: Boolean
                        location: ~
                    typing: Boolean
                    location: ~
              typing: Boolean
              location: ~
          location: ~
    location: ~
component: ~
location: ~

